--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "migrate": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6"
   }
